css/index.css
/* RESETS ======================================================== */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* GLOBALS ======================================================= */
html {
    background-color: cyan;
    --HUE: 180;
    --DARKER-HSL: var(--HUE), 33%, 10%;
    --DARK-HSL: var(--HUE), 33%, 20%;
    --ACCENT-HSL: var(--HUE), 33%, 50%;
    --LIGHT-HSL: var(--HUE), 33%, 80%;
    --LIGHTER-HSL: var(--HUE), 33%, 90%;

}

body {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    font-family: Arial, Helvetica, sans-serif;
    color: hsl(var(--LIGHTER-HSL));
    scrollbar-color: hsl(var(--DARKER-HSL)) transparent;
}

header {
    background-color: hsl(var(--DARKER-HSL));
    padding: 1vh 1vh 1vh 1vh;
}

main {
    background-color: hsl(var(--DARK-HSL));
    flex: 1;
    min-height: 0;
    overflow-y: auto;
    display: flex;
    flex-flow: column;
}

footer {
    background-color: hsl(var(--DARKER-HSL));
    padding: 1vh 1vh 1vh 1vh;
}

/* NAVBAR ======================================================== */

.navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.navbar__title {
    font-size: 2rem;
}

.navbar__list {
    list-style: none;
    display: flex;
    gap: 1rem;
}

.navbar__item {
    color: hsl(var(--LIGHT-HSL));
    cursor: pointer;
}

.navbar__item:hover {
    color: hsl(var(--ACCENT-HSL));
    border-radius: 10%;
}

/* TODO LIST ===================================================== */

.todolist {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: .25rem;
    padding: .5rem 0;
}

.todolist__item {
    display: grid;
    grid-template-columns: auto 1fr auto;
    align-items: center;
    gap: 1rem;
    padding: .25rem .5rem;
}

.todolist__item:hover {
    background-color: hsl(var(--ACCENT-HSL));
}

.todolist__entry {
    font-size: 1rem;
}

.todolist__field {
    font-size: 1.5rem;
    background-color: inherit;
    color: hsl(var(--LIGHTER-HSL));
    border: none;
}

.todolist__checkbox {
    display: flex;
    justify-content: center;
}

.todolist__checkbox-box {
    position: absolute;
    opacity: 0;
    width: 1px;
    height: 1px;
}

.todolist__checkbox-style {
    background-color: hsl(var(--DARKER-HSL));
    border: 2px solid hsl(var(--LIGHT-HSL));
    width: 2rem;
    height: 2rem;
    position: relative;
}

.todolist__checkbox-box:focus+.todolist__checkbox-style {
    outline: 2px solid blue;
    border-radius: 10%;
    outline-offset: -3px;
}

.todolist__checkbox-box:checked+.todolist__checkbox-style::after {
    position: absolute;
    content: "✓";
    color: hsl(var(--LIGHTER-HSL));
    font-size: 2rem;
    top: -20%;
    right: 10%;
}

.todolist__add-button {
    background-color: hsl(var(--DARKER-HSL));
    border: 2px solid hsl(var(--LIGHT-HSL));
    width: 2rem;
    height: 2rem;
    position: relative;
}

.todolist__add-button:focus::before,
.todolist__add-button:hover::before {
    position: absolute;
    content: "+";
    font-size: 3rem;
    top: -47%;
    right: 0%;
    color: hsl(var(--ACCENT-HSL));
}

/* ACTION BUTTON ================================================= */

.todolist__action-button {
    border: none;
    background: transparent;
    width: 2rem;
    height: 2rem;
    position: relative;
    cursor: grab;
}

.todolist__action-button:active {
    border: none;
    background: transparent;
    width: 2rem;
    height: 2rem;
    position: relative;
    cursor: grabbing;
}

.todolist__action-button.selected {
    cursor: pointer;
}

.todolist__action-button-icon,
.todolist__action-button-icon::before,
.todolist__action-button-icon::after {
    content: "";
    position: absolute;
    background-color: hsl(var(--LIGHT-HSL));
    border-radius: 5px;
    width: 100%;
    height: 3px;
    left: 0;
    transition: all .5s;
}

.todolist__action-button-icon::before {
    top: 8px;
}

.todolist__action-button-icon::after {
    bottom: 8px;
}

.todolist__action-button-icon.selected::before {
    top: 0px;
    transform: rotate(45deg);
}

.todolist__action-button-icon.selected {
    background-color: transparent;
}

.todolist__action-button-icon.selected::after {
    bottom: 0px;
    transform: rotate(-45deg);
}

